Tue Jul 29 08:25:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO/TAO_IDL/driver/drv_preproc.cpp:
          Interesting results, looks like some sort of fd conflict or
          temporary name problem, remove the delay and increase error
          diagnostics.

Mon Jul 28 14:58:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/Asynch_Timeout_Handler.cpp:
          Added a debug statement to print a message when a request gets
          a timeout

        * tao/Muxed_TMS.cpp:
          Just unbind without getting the rd

Mon Jul 28 14:41:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/Asynch_Reply_Dispatcher.cpp:
          Only parse the reply and generate a fake exception when there
          is a reply handler. Improved performance if a client makes
          AMI invocations but doesn't specify a reply handler

Mon Jul 28 14:20:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp:
          Make sure tms_ and ws_ are initialised to 0

        * tao/Resume_Handle.h:
          Documentation changes

        * tao/Muxed_TMS.cpp:
          Const changes

        * tao/Connection_Handler.cpp:
          Layout changes

        * tao/GIOP_Message_Base.cpp (dump_msg):
          Return directly when we don't have orb debug level 10, increases
          performance when we run at level 5 until 9

Mon Jul 28 13:57:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO/TAO_IDL/driver/drv_preproc.cpp:
          Change test for Vista specifically not just all win32.

Mon Jul 28 13:25:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO/TAO_IDL/driver/drv_preproc.cpp:
          Vista specifically has some OS file timing issues, TAO_IDL
          keeps failing to open temporary files. These mods should
          help identify where these are comming from. (I beleive it is